--- a/index.html
+++ b/index.html
@@ -179,10 +179,7 @@
 
             }
             .child-card-1 img {
-                height: 200px;
-                margin-left: 5px;
-                margin-top: 20px;
-                margin-top: 25%;
+                height: 100%;
                 width: 100%;
                 transition: 0.3s ease;
                 
@@ -195,12 +192,15 @@
                 left: 0%;
                 bottom: 0;
                 width: 100%;
-                height: 100;
+                height: 100%;
                 padding: 10px;
                 transition: opacity 0.3s ease-in-out;
                 text-align: center;
-                background-color: darkblue;
+                background-color: rgba(0, 0, 139, 0.5); 
                 opacity: 0;
+                justify-content: center;
+                align-items: center;
+                display:flex;
             }
             .child-card-1:hover .hover-text {
                 opacity: 1;
@@ -247,8 +247,8 @@
                     <div class = "container-img">
                         <div class = "card-1">
                             <div class ="child-card-1">
-                                <img src = "shoes.png">
-                                <div class = "hover-text">Hover Me</div>  
+                                <img src = "bg.jpg">
+                                <div class = "hover-text">Chess</div>  
                             </div>
                         </div>
                         <div class = "card-1">
